--- a/index.html
+++ b/index.html
@@ -9,32 +9,39 @@
 </head>
 <body>
     <header>
-
-    </header>
-    <section class="header-list" style="background-color: green;">
-        <ul>
-            <li class="li">Github</li>
-            <li class="li">Portfolio</li>
-            <li class="li">Contact</li>
+        <ul class="li">
+            <li >Github</li>
+            <li >Portfolio</li>
+            <li ><a href="#contact">Contact</a></li>
         </ul>
-    </section>
+    </header>
+    <section>
+        <section class ="bar">
+            <br>
+        </section>
+    </section>  
     <section >
-        <h1>My New Website</h1>
-        <img>
+        <h1 class="content">My New Website</h1>
+        <img src="./assest/images/coming-soon.jpg">
+        <div class="square"></div>
         <p></p>
     </section>
-    <section>
+    <section class="container">
         <h1>Contact Me</h1>
-        <label for="fname">Name:</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-        <br>
-        <label for="fname">Email:</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <section class ="contact" id="contact">
+            
+            <label for="fname">Name:</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+            <br>
+            <label for="fname">Email:</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+            <br>
+            <input type="Submit" value="Send" class="button" >
+        </section>
     </section>
-    <br>
-    <input type="Submit" value="Send">
     <footer>
-        <p>My New Website Production</p>
+        <br>
+        <p id="foot">My New Website Production</p>
     </footer>
 </body>
 </html>
