add paragraph the the web page

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
             <br>
         </section>
     </section>  
-    <section >
-        <h1 class="content">My New Website</h1>
+    <section class="content">
+        <br>
+        <h1 >My New Website</h1>
+        <br>
         <img src="./assest/images/coming-soon.jpg">
-        <div class="square"></div>
-        <p></p>
+        <br>
+        <p>The new Website is comming soon</p>
+        <br>
     </section>
     <section class="container">
         <h1>Contact Me</h1>
