--- a/index.html
+++ b/index.html
@@ -14,30 +14,31 @@
             <li >Portfolio</li>
             <li ><a href="#contact">Contact</a></li>
         </ul>
-    </header>
-    <section>
-        <section class ="bar">
-            <br>
+        <section>
+            <section class ="bar">
+                <br>
+            </section>
         </section>
-    </section>  
+    </header>
+  
     <section class="content">
         <br>
-        <h1 >My New Website</h1>
+        <h1 class="text">My New Website</h1>
         <br>
-        <img src="./assest/images/coming-soon.jpg">
+        <img src="./assest/images/coming-soon.jpg" alt="The website is comming soon">
         <br>
-        <p>The new Website is comming soon</p>
+        <h2 class="text">The new Website is comming soon</h2>
         <br>
     </section>
     <section class="container">
-        <h1>Contact Me</h1>
+        <h1 class="text">Contact Me</h1>
         <section class ="contact" id="contact">
             
             <label for="fname">Name:</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
             <br>
             <label for="fname">Email:</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+            <input type="email" id="fname" name="firstname" placeholder="Your Email..">
             <br>
             <input type="Submit" value="Send" class="button" >
         </section>
