--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <footer>
         <br>
-        <p id="foot">My New Website Production</p>
+        <p id="foot">&copy; My New Website Production</p>
     </footer>
 </body>
 </html>
